# lexito

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/ai/: Cargo.toml
crates/ai/src/: client.rs  error.rs  lib.rs  models.rs  prompt.rs  settings.rs
crates/ai/tests/: settings_roundtrip.rs
crates/core/: Cargo.toml
crates/core/src/: catalog.rs  error.rs  lib.rs  model.rs  project.rs  validation.rs
crates/core/tests/: catalog_flow.rs
crates/core/tests/fixtures/: fr.po  messages.pot
crates/desktop/: Cargo.toml
crates/desktop/src/: app.rs  colors.rs  icons.rs  locales.rs  main.rs  project_views.rs  tasks.rs  theme.rs  types.rs  update.rs  views.rs
macos/: Info.plist  bundle.sh
