[package]
name = "lexito-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
directories.workspace = true
futures.workspace = true
keyring.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
lexito-core = { path = "../core" }
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
